--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,24 +1,23 @@
-name: Cspell Lint                                                         # Define the name of the workflow
+name: Cspell Lint                                            # Define the name of the workflow
 
-on: [push, pull_request]                                                  # Trigger the workflow on push and pull request events
+on: [push, pull_request]                                     # Trigger the workflow on push and pull request events
 
-jobs:                                                                     # Initialise jobs
-  lint:                                                                   # Define a job named 'lint'
-    runs-on: ubuntu-latest                                                # Specify the type of virtual machine to use (Ubuntu latest version)
+jobs:                                                        # Initialise job
+  lint:                                                      # Define a job named 'lint'
+    runs-on: ubuntu-latest                                   # Specifies the type of VM to provision
 
-    container:                                                            # Initialise container
-      image: monkeyknuckles/cspell                                        # Use a Docker container with the cspell image
+    container:                                               # Set container image
+      image: monkeyknuckles/cspell                           # Points to CSpell container
 
-    steps:                                                                # List of steps to execute in the job
-      - name: Checkout code                                               # Step name: Checkout code from the repository
-        uses: actions/checkout@v3                                         # Use the checkout action to clone the repository
+    steps:                                                   # List of steps to execute
+      - name: Checkout code                                  # Checkout code label text
+        uses: actions/checkout@v3                            # Use the checkout action to clone the repository
 
-      - name: Copy Cspell config                                          # Step name: Copy cspell configuration file
-        run: cp /app/cspell.config.yaml $GITHUB_WORKSPACE                 # Copy the .cspell.config.yaml file from the container to the workspace
+      - name: Copy CSpell config                             # Copy CSpell configuration file label text
+        run: cp /app/cspell.config.yaml $GITHUB_WORKSPACE    # Include the CSpell configuration file in the docker build
 
-      - name: Run Cspell                                                  # Step name: Run Cspell
-        run: |
-             cspell . --color --language-id en-GB
+      - name: Run Lint CSpell                                # Set lint CSpell label text
+        run: cspell . --color --language-id en-GB            # Spellcheck all files
               
   
       
